2005-08-08  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* configure.in: Added "zh_TW" to ALL_LINGUAS.

Fri Jul 22 10:12:09 2005  George Lebl <jirka@5z.com>

	* Release 0.7.4

Thu Jul 21 16:56:44 2005  George Lebl <jirka@5z.com>

	* help/C/gel-function-list.xml: minor fix

	* help/C/genius.txt: generate

Thu Jul 21 16:54:09 2005  George Lebl <jirka@5z.com>

	* src/graphing.c: Add parametric plots, add LinePlotParametric and
	  LinePlotCParametric

	* src/mpwrap.[ch]: add mpw_get_complex_double

	* help/C/gel-function-list.xml: add LinePlotParametric and
	  LinePlotCParametric

Fri Jun 24 17:39:48 2005  George Lebl <jirka@5z.com>

	* src/symbolic.c, src/geniustests.txt: allow differentiation of
	  E_CALL's where first arg is a function, not an identifier, for
	  example this is what we get on SymbolicDerivative(sin*cos)

Fri Jun 24 17:21:22 2005  George Lebl <jirka@5z.com>

	* src/symbolic.c, src/eval.c, src/geniustests.txt: Some more
	  simplification special casing, doing several tan derivatives is
	  now much faster and results in shorter answers, yay.  Also run
	  the evalnode hook so that we can interrupt a symbolic derivation
	  which is taking too long.

Fri Jun 24 16:23:01 2005  George Lebl <jirka@5z.com>

	* src/longtest.gel: add many derivative tests

	* src/funclib.c: add IsFunctionOrIdentifier

	* lib/calculus/differentiation.gel: accept identifiers for all
	  functions and not just functions

	* help/C/gel-function-list.xml: add IsFunctionOrIdentifier

	* src/eval.c: Allow identifier + string to make a string

	* src/symbolic.c: fix some derivative definitions

	* src/eval.c: fixup nargs when creating new operator nodes in
	  simplification

Fri Jun 24 15:42:09 2005  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch]: add symbolic equality (respects types)

	* src/eval.[ch]: further simplification of multiplication and
	  addition, still crap, but lesser crap now.  I need to make this
	  more general and nicer.
