@@ -1,3 +1,8 @@
+Thu Aug 11 11:51:10 2005  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: make the unsaved work quit dialog work for
+	  window closing as well (it just asked but quit anyway in that case).
+
 2005-08-08  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* configure.in: Added "zh_TW" to ALL_LINGUAS.
